--- a/spring-cloud/spring-cloud-stream-app-starters/pom.xml
+++ b/spring-cloud/spring-cloud-stream-app-starters/pom.xml
@@ -10,19 +10,19 @@
   <parent>
     <groupId>org.springframework.cloud</groupId>
     <artifactId>spring-cloud-build</artifactId>
-    <version>2.0.4.RELEASE</version>
+    <version>2.1.5.RELEASE</version>
     <relativePath/>
   </parent>
   <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.9</maven.compiler.source>
+    <maven.compiler.target>1.9</maven.compiler.target>
     <scs-app-maven-plugin.version>1.0.0.BUILD-SNAPSHOT</scs-app-maven-plugin.version>
-    <app-starters-docs-plugin.version>2.0.0.RELEASE</app-starters-docs-plugin.version>
+    <app-starters-docs-plugin.version>2.0.1.RELEASE</app-starters-docs-plugin.version>
     <bomsWithHigherPrecedence/>
     <stream-app-starters-dependencies.version>1.0.0.BUILD-SNAPSHOT</stream-app-starters-dependencies.version>
     <stream-app-starters-metrics-dependencies.version>1.0.0.BUILD-SNAPSHOT
     </stream-app-starters-metrics-dependencies.version>
-    <app-metadata-maven-plugin-version>1.0.0.RELEASE</app-metadata-maven-plugin-version>
+    <app-metadata-maven-plugin-version>1.0.1.RELEASE</app-metadata-maven-plugin-version>
   </properties>
 
   <modules>
@@ -161,6 +161,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+      <version>1.18.8</version>
     </dependency>
   </dependencies>
 </project>
