--- a/spring-cloud/spring-cloud-stream-app-starters/spring-cloud-stream-app-starters-dependencies/pom.xml
+++ b/spring-cloud/spring-cloud-stream-app-starters/spring-cloud-stream-app-starters-dependencies/pom.xml
@@ -12,13 +12,13 @@
   <parent>
     <artifactId>spring-cloud-dependencies-parent</artifactId>
     <groupId>org.springframework.cloud</groupId>
-    <version>2.0.4.RELEASE</version>
+    <version>2.1.5.RELEASE</version>
     <relativePath/>
   </parent>
 
   <properties>
-    <java.version>1.8</java.version>
-    <spring-cloud-dependencies.version>Finchley.SR2</spring-cloud-dependencies.version>
+    <java.version>1.9</java.version>
+    <spring-cloud-dependencies.version>Greenwich.RELEASE</spring-cloud-dependencies.version>
   </properties>
 
   <dependencyManagement>
